Prevent Ansible Galaxy to failed. Adding categories

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,10 @@ galaxy_info:
     - name: Debian
       versions:
         - wheezy
+  categories:
+    - database
+    - database:nosql
+    - web
 
 dependencies:
   - { role: Ansibles.erlang, erlang-version: "{{ erlang_version }}"  }
