Add dependencies from erlang role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,3 +17,4 @@ galaxy_info:
 
 dependencies:
   - { role: Ansibles.erlang, erlang-version: "{{ erlang_version }}"  }
+  - { role: Ansibles.build-essential }
