--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,11 +10,20 @@
   set_fact: couchdb_version_installed="{{ (couchdb_response.content|from_json).version }}"
   when: couchdb_response|success
 
+- name: Stop CouchDB
+  service: name=couchdb enabled=yes state=stopped
+  when: couchdb_version_installed != "{{ couchdb_version }}"
+  ignore_errors: True
+
 - include: package.yml
   when: couchdb_install_method == "package" and couchdb_version_installed != "{{ couchdb_version }}"
 
 - include: source.yml
   when: couchdb_install_method == "source" and couchdb_version_installed != "{{ couchdb_version }}"
 
-- name: Check CouchDB runs
+- name: Start CouchDB
+  service: name=couchdb enabled=yes state=started
+  when: couchdb_version_installed != "{{ couchdb_version }}"
+
+- name: Verifying that CouchDB runs
   uri: url=http://127.0.0.1:5984/
