--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,11 @@ couchdb_base_url: "http://apache.crihan.fr/dist/couchdb/source/{{ couchdb_versio
 couchdb_tarball_url: "{{ couchdb_base_url }}{{ couchdb_file_name }}"
 couchdb_shasum_url: "https://www.apache.org/dist/couchdb/source/{{ couchdb_version }}/{{ couchdb_file_name }}.sha"
 couchdb_tmp_dir: "/tmp/"
+
+couchdb_bind_adress: "127.0.0.1"
+couchdb_ssl: "false"
+couchdb_cert_file: ""
+couchdb_key_file: ""
+couchdb_admins:
+  - name: 'admin'
+    pass: 'admin'
